# webservice-test-sandbox

./: .coveragerc  .dockerignore  .gitignore  .pre-commit-config.yaml  CODEOWNERS  Dockerfile  README.md  app.py  compose.yaml  justfile  next.config.js  package-lock.json  package.json  pyproject.toml  pytest.ini
.github/: pull_request_template.md
.github/actions/setup-workspace/: action.yaml
.github/workflows/: pre-commit.yaml
backend/: __init__.py  main.py  service.py
backend/core/: __init__.py  constants.py  types.py
backend/routes/v0/: __init__.py
components/: HomePage.tsx
container/: README.md  backend.Dockerfile  frontend.Dockerfile
pages/: _app.tsx
scripts/: setup.sh  start-dev.sh
styles/: Home.module.css
tests/: conftest.py
tests/examples/: test_examples.py
tests/integration/: test_base_endpoints.py
tests/testutils/: client.py  conditions.py
